# soft_renderer

./: .gitignore  .gitmodules  CMakeLists.txt
src/: FppCamera.h  FpsMonitor.h  Framebuffer.cpp  Framebuffer.h  IShader.h  Log.h  Model.cpp  Model.h  Primitive.cpp  Primitive.h  Signals.cpp  Signals.h  Texture2D.cpp  Texture2D.h  Types.h  Window.h  main.cpp
